fixed left-aligned bullets and centered text

--- a/src/App.css
+++ b/src/App.css
@@ -37,3 +37,8 @@
         transform: rotate(360deg);
     }
 }
+
+ul {
+    display: inline-block;
+    text-align: left;
+}
